# W3SDOOM

./: .gitignore  CMakeLists.txt  Pooch.vcxproj  README.md  am_map.c  am_map.h  d_deh.c  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_main.c  i_main.h  i_net.c  (+95 more)
launchers/macos/poochlauncher/poochlauncher/poochlauncher.xcodeproj/: project.pbxproj
launchers/macos/poochlauncher/poochlauncher/poochlauncher.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
launchers/macos/poochlauncher/poochlauncher/sprinkledlauncher/: LauncherManager.h
launchers/macos/poochlauncher/poochlauncher/sprinkledlauncher/Base.lproj/: launcher.xib
launchers/windows/: PoochLauncher.aps  PoochLauncher.c  PoochLauncher.h  SprinkledLauncher.vcxproj  W3SDOOM Launcher.rc  W3SDOOM Launcher.sln  W3SDOOM Launcher.vcxproj
launchers/windows/x64/Release/: W3SDOOM Launcher.iobj  W3SDOOM Launcher.ipdb  W3SDOOM Launcher.vcxproj.FileListAbsolute.txt
src/: CMakeLists.txt  Pooch.sln  Pooch.vcxproj  d_main.c  doomstat.c  i_main.c  i_system.h  info.c  m_cheat.c  m_misc.c  p_ceilng.c  p_enemy.c  p_floor.c  p_genlin.c  p_setup.c  p_user.c  pooch.vcxproj.filters  pooch_icon.icns  r_bsp.c  r_main.c  r_segs.c  r_things.c  version.h
src/launchers/macos/poochlauncher/poochlauncher/poochlauncher.xcodeproj/project.xcworkspace/xcuserdata/ats.xcuserdatad/: UserInterfaceState.xcuserstate
src/launchers/macos/poochlauncher/poochlauncher/poochlauncher.xcodeproj/xcshareddata/xcschemes/: sprinkledlauncher.xcscheme
src/launchers/macos/poochlauncher/poochlauncher/poochlauncher.xcodeproj/xcuserdata/ats.xcuserdatad/xcschemes/: xcschememanagement.plist
src/launchers/macos/poochlauncher/poochlauncher/sprinkledlauncher/: AppDelegate.h  AppDelegate.m  Execute.h  Execute.m  IWADLocation.m  LauncherManager.m
win32/: pooch.rc  w3sdoom.aps  w3sdoom.rc
